Add garbage collection logging
Run docker exec -it infolink-app tailf /var/log/infolis-gc.log.0.current